force-app/main/default/objects/Semen_Straw__c/Semen_Straw__c.object-meta.xml
<CustomObject>
    <label>Semen Straw</label>
    <nameField>
        <label>Semen Straw Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Semen Straws</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>