force-app/main/default/objects/Semen_Straw__c/fields/Date_Discarded__c.field-meta.xml
<CustomField>
    <fullName>Date_Discarded__c</fullName>
    <label>Date Discarded</label>
    <type>Date</type>
</CustomField>