force-app/main/default/objects/Semen_Straw__c/fields/Freeze_Medium__c.field-meta.xml
<CustomField>
    <fullName>Freeze_Medium__c</fullName>
    <label>Freeze Medium</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sage</fullName>
            </value>
            <value>
                <fullName>Vitrolife</fullName>
            </value>
            <value>
                <fullName>Cook</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>