force-app/main/default/objects/Semen_Straw__c/fields/Freeze_Witness__c.field-meta.xml
<CustomField>
    <fullName>Freeze_Witness__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Freeze Witness</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Semen_Straws1</relationshipName>
    <type>Lookup</type>
</CustomField>