force-app/main/default/objects/Semen_Straw__c/fields/Post_Thaw_Concentration__c.field-meta.xml
<CustomField>
    <fullName>Post_Thaw_Concentration__c</fullName>
    <label>Post Thaw Concentration</label>
    <precision>7</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>