force-app/main/default/objects/Semen_Straw__c/fields/Post_Thaw_Immotile__c.field-meta.xml
<CustomField>
    <fullName>Post_Thaw_Immotile__c</fullName>
    <formula>1- Post_Thaw_Total_Motility__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Post Thaw Immotile</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>