force-app/main/default/objects/Semen_Straw__c/fields/Post_Thaw_Prog_Grade__c.field-meta.xml
<CustomField>
    <fullName>Post_Thaw_Prog_Grade__c</fullName>
    <label>Post Thaw Prog Grade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Prog_Grade</valueSetName>
    </valueSet>
</CustomField>