force-app/main/default/objects/Semen_Straw__c/fields/Post_Thaw_Straw__c.field-meta.xml
<CustomField>
    <fullName>Post_Thaw_Straw__c</fullName>
    <label>Post Thaw Straw</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>