force-app/main/default/objects/Semen_Straw__c/fields/Post_Thaw_Total_Motile_Count__c.field-meta.xml
<CustomField>
    <fullName>Post_Thaw_Total_Motile_Count__c</fullName>
    <formula>VALUE(TEXT( Straw_Size__c )) * Post_Thaw_Concentration__c * Post_Thaw_Total_Motility__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Post Thaw Total Motile Count</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>