force-app/main/default/objects/Semen_Straw__c/fields/Post_Thaw_Total_Motility__c.field-meta.xml
<CustomField>
    <fullName>Post_Thaw_Total_Motility__c</fullName>
    <formula>Post_Thaw_Non_Progressive_Motility__c + Post_Thaw_Progressive_Motility__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Post Thaw Total Motility</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>