force-app/main/default/objects/Semen_Straw__c/fields/Prog_Grade__c.field-meta.xml
<CustomField>
    <fullName>Prog_Grade__c</fullName>
    <label>Prog Grade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Prog_Grade</valueSetName>
    </valueSet>
</CustomField>