force-app/main/default/objects/Semen_Straw__c/fields/Semen_Sample__c.field-meta.xml
<CustomField>
    <fullName>Semen_Sample__c</fullName>
    <label>Semen Sample</label>
    <referenceTo>Semen_Sample__c</referenceTo>
    <relationshipLabel>Semen Straws</relationshipLabel>
    <relationshipName>Semen_Straws</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>