force-app/main/default/objects/Semen_Straw__c/fields/Storage_Date__c.field-meta.xml
<CustomField>
    <fullName>Storage_Date__c</fullName>
    <label>Freeze Date</label>
    <type>Date</type>
</CustomField>