force-app/main/default/objects/Semen_Straw__c/fields/Storage_Type__c.field-meta.xml
<CustomField>
    <fullName>Storage_Type__c</fullName>
    <label>Storage Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ART</fullName>
            </value>
            <value>
                <fullName>Medical Storage</fullName>
            </value>
            <value>
                <fullName>Known Donor</fullName>
            </value>
            <value>
                <fullName>OS Donor</fullName>
            </value>
            <value>
                <fullName>Surgical Collection</fullName>
            </value>
            <value>
                <fullName>Pre-Vasectomy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>