force-app/main/default/objects/Semen_Straw__c/fields/Straw_Size__c.field-meta.xml
<CustomField>
    <fullName>Straw_Size__c</fullName>
    <label>Straw Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0.5</fullName>
            </value>
            <value>
                <fullName>0.3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>