force-app/main/default/objects/Semen_Straw__c/fields/Thaw_Scientist__c.field-meta.xml
<CustomField>
    <fullName>Thaw_Scientist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Thaw Scientist</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Semen_Straws2</relationshipName>
    <type>Lookup</type>
</CustomField>