force-app/main/default/objects/Semen_Straw__c/fields/Thaw_Witness__c.field-meta.xml
<CustomField>
    <fullName>Thaw_Witness__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Thaw Witness</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Semen_Straws3</relationshipName>
    <type>Lookup</type>
</CustomField>