force-app/main/default/objects/Semen_Straw__c/fields/Used_In_Cycle__c.field-meta.xml
<CustomField>
    <fullName>Used_In_Cycle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Used In Cycle</label>
    <referenceTo>Cycle__c</referenceTo>
    <relationshipLabel>Semen Straws</relationshipLabel>
    <relationshipName>Semen_Straws</relationshipName>
    <type>Lookup</type>
</CustomField>